# deeper-latency-monitor

./: .env  README.md  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
backend/: Dockerfile  pyproject.toml
backend/deeper_latency_monitor_be/: __main__.py  database.py  models.py  os_utils.py  schemas.py  settings.py  utils.py  website_monitor.py
backend/deeper_latency_monitor_be/handlers/: __init__.py  history.py  monitor.py
backend/deeper_latency_monitor_be/routes/: __init__.py  history.py  monitor.py  settings.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  types.d.ts
frontend/src/: routes.ts  types.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/: route.ts
frontend/src/components/: index.ts
frontend/src/components/AppSettings/: index.tsx
frontend/src/components/AppShell/: index.tsx
frontend/src/components/BenchmarkSettings/: index.tsx
frontend/src/components/CardsManager/: CardManager.module.css  index.tsx
frontend/src/components/CardsManager/Card/: TrafficLightIcon.tsx  index.tsx
frontend/src/components/CardsManager/EmptyCard/: NewCardForm.tsx  index.tsx
frontend/src/components/EditableText/: EditableText.module.css  index.tsx
frontend/src/components/SamplingSettings/: index.tsx
frontend/src/hooks/: index.ts  monitoring.ts
frontend/src/store/: zustand.ts
src/app/: layout.tsx
src/components/: index.ts
src/components/AppShell/: index.tsx
src/components/CardsManager/: index.tsx
src/components/SamplingSettings/: index.tsx
