[tool.poetry]
name = "deeper-latency-monitor-be"
version = "0.1.0"
description = ""
authors = ["Noam Levi <noaml12@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
